fix(ui): fix visual defects from clockface 2 upgrade (#17176)
* refactor(ui): redesign and clean up query tabs

* refactor(ui): remove extra space in VEO empty state

* fix(ui): ensure gauge fonts render correctly

* fix(ui): ensure single stat font renders correctly

* fix(ui): update veo to match styles of other overlays

* fix(ui): update font definition in monaco editors

* refactor(ui): soften contrast of grid axes with background

* fix(ui): prevent references to Roboto

* chore(ui): prettier

* refactor(ui): use more resilient variable

* refactor(ui): polish appearance of alert and check history pages

* fix(ui): ensure create check dropdown is not clipped

* refactor(ui): update colors in view type dropdown

* refactor(ui): ensure view options toggle and panel are consistent across editors

--- a/ui/src/timeMachine/components/QueryTab.scss
+++ b/ui/src/timeMachine/components/QueryTab.scss
@@ -1,46 +1,64 @@
 @import "src/style/modules";
 
+$query-tab--height: $cf-form-sm-height;
+$query-tab--padding: $cf-form-sm-padding;
+$query-tav--font-size: $cf-form-sm-font;
+
+$query-tab--default-bg: $g2-kevlar;
+$query-tab--default-text: $g10-wolf;
+
+$query-tab--hover-bg: $g3-castle;
+$query-tab--hover-text: $g15-platinum;
+
+$query-tab--active-bg: $g3-castle;
+$query-tab--active-text: $g18-cloud;
+
+
 .query-tab {
-  background: rgba($g3-castle, .45);
-  margin: 0 1px;
-  border-radius: 5px 5px 0 0;
+  background-color: $query-tab--default-bg;
+  color: $query-tab--default-text;
+  margin-right: $cf-border;
+  height: $query-tab--height;
+  border-radius: $cf-radius;
   display: inline-flex;
   flex: 0 1 auto;
   justify-content: space-between;
   align-items: center;
-  color: $g10-wolf;
-  font-weight: 700;
-  padding: 0 12px;
-  font-size: $ix-text-tiny;
-  cursor: pointer !important;
-  @include no-user-select();
+  font-weight: $cf-font-weight--medium;
+  padding: 0 $query-tab--padding;
+  font-size: $query-tav--font-size;
+  user-select: none;
+  transition: background-color 0.25s ease, color 0.25s ease, opacity 0.25s ease;
 
   .query-tab--hide {
     display: none;
+    font-size: 1.125em;
+    margin-right: $cf-marg-a;
   }
 
   .query-tab--name {
-    margin: 0 $ix-marg-a 0 $ix-marg-a;
-    width: 30px;
+    width: 40px;
+    margin-right: $cf-marg-a;
   }
 
-  &.active {
-    flex: 0 0 auto;
-    background: $g3-castle;
-    color: $g16-pearl;
+  &:hover {
+    cursor: pointer;
+    background-color: $query-tab--hover-bg;
+    color: $query-tab--hover-text;
+  }
+}
 
-    .query-tab--hide {
-      display: inline-flex;
-    }
-
-    .query-tab--name {
-      margin: 0 $ix-marg-a 0 $ix-marg-b;
-      width: auto;
-    }
+.query-tab__active {
+  flex: 0 0 auto;
+  background: $g3-castle;
+  color: $g16-pearl;
+  
+  .query-tab--hide {
+    display: inline-flex;
   }
   
-  &:hover:not(.active) {
-    color: $g14-chromium;
+  .query-tab--name {
+    width: auto;
   }
 }
 
@@ -48,14 +66,32 @@
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  
 }
 
-.query-tab--close, .query-tab--hide {
-  margin-bottom: 2px;
-  color: $g7-graphite;
+.query-tab--close,
+.query-tab--hide {
+  color: rgba($g15-platinum, 50%);
+  transition: color 0.25s ease;
 
   &:hover {
-    color: $g16-pearl;
+    color: $g15-platinum;
+  }
+}
+
+.query-tab__hidden {
+  font-style: italic;
+  opacity: 0.5;
+}
+
+.query-tab--timer {
+  white-space: nowrap;
+  flex: 1 1 auto;
+  font-weight: $cf-font-weight--medium;
+  margin-right: $cf-marg-b;
+  transition: opacity 0.25s;
+  opacity: 0;
+
+  &.query-tab--timer__visible {
+    opacity: 0.5;
   }
 }
